test/extern/ferguson/mismatch-errors/mismatch-rii64-ii64.good
mismatch-rii64-ii64.chpl:4: error: extern proc does not match C declaration
